src/asmjit/parsers/pascal/PascalParser.py
# Generated from compiler/grammar/PascalParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PascalParser ( Parser ):

    grammarFileName = "PascalParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'..'", "'.'", "':='", "':'", "';'", "','", 
                     "'+'", "'-'", "'*'", "'/'", "'['", "'('", "')'", "']'", 
                     "'^'", "'@'", "'='", "'<='", "'<>'", "'<'", "'>='", 
                     "'>'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "BEGIN_", "END", "LIBRARY", 
                      "UNIT", "INTERFACE", "IMPLEMENTATION", "USES", "EXPORTS", 
                      "CONST", "VAR", "TYPE", "PACKED", "RECORD", "ARRAY", 
                      "OF", "NIL", "DOUBLE", "INTEGER", "CASE", "IF", "THEN", 
                      "ELSE", "BREAK", "CONTINUE", "NOT", "AND", "OR", "XOR", 
                      "SHL", "SHR", "WHILE", "DO", "REPEAT", "UNTIL", "FOR", 
                      "TO", "DOWNTO", "INC", "DEC", "LOW", "HIGH", "POS", 
                      "COPY", "LENGTH", "ASSIGNED", "PROCEDURE", "FUNCTION", 
                      "RESULT", "EXIT", "TRY", "FINALLY", "EXCEPT", "CLASS", 
                      "CONSTRUCTOR", "DESTRUCTOR", "PRIVATE", "PROTECTED", 
                      "PUBLIC", "PUBLISHED", "PROPERTY", "VIRTUAL", "OVERRIDE", 
                      "READ", "WRITE", "INHERITED", "WRITELN", "BOOLEAN", 
                      "TRUE", "FALSE", "BLAKE2", "CRC16", "CRC32", "CRC32C", 
                      "CRC64", "DISKFREE", "DISKTOTAL", "DISKLABEL", "DISKSERIAL", 
                      "DISKFILESYSTEM", "DISKTYPE", "DISKSHARE", "CDECL", 
                      "STDCALL", "PASCAL", "EXTERNAL", "NAME", "COMPILER_DIRECTIVE", 
                      "DOTDOT", "DOT", "ASSIGN", "COLON", "SEMI", "COMMA", 
                      "PLUS", "MINUS", "STAR", "SLASH", "LBRACK", "LPAREN", 
                      "RPAREN", "RBRACK", "CARET", "AT", "EQ_OP", "LE_OP", 
                      "NE_OP", "LT_OP", "GE_OP", "GT_OP", "STRING", "CHARCODE", 
                      "FLOATNUMBER", "HEXNUMBER", "NUMBER", "IDENT", "WS", 
                      "COMMENT1", "COMMENT2", "COMMENT3", "MD5", "SHA1", 
                      "SHA3", "SHA224", "SHA256", "SHA384", "SHA512" ]

    RULE_sourceFile = 0
    RULE_externalImportTarget = 1
    RULE_routineCallingConvention = 2
    RULE_externalRoutineDirective = 3
    RULE_externalLibrary = 4
    RULE_callingConvention = 5
    RULE_programFile = 6
    RULE_unitFile = 7
    RULE_libraryFile = 8
    RULE_compilerDirective = 9
    RULE_exportsClause = 10
    RULE_exportItem = 11
    RULE_exportSignature = 12
    RULE_exportTypeList = 13
    RULE_usesClause = 14
    RULE_qualifiedIdentList = 15
    RULE_interfaceSection = 16
    RULE_implementationSection = 17
    RULE_interfaceDeclarationPart = 18
    RULE_implementationDeclarationPart = 19
    RULE_unitInitBlock = 20
    RULE_qualifiedIdent = 21
    RULE_methodDirective = 22
    RULE_methodDirectiveList = 23
    RULE_declarationPart = 24
    RULE_classMethodImplementation = 25
    RULE_procedureHeader = 26
    RULE_functionHeader = 27
    RULE_constSection = 28
    RULE_constDeclaration = 29
    RULE_constItem = 30
    RULE_constValue = 31
    RULE_typeSection = 32
    RULE_typeIdentifier = 33
    RULE_typeDeclaration = 34
    RULE_classDeclaration = 35
    RULE_classParent = 36
    RULE_classBody = 37
    RULE_classMember = 38
    RULE_visibilitySection = 39
    RULE_propertyDeclaration = 40
    RULE_propertyAccessor = 41
    RULE_classFunctionDeclaration = 42
    RULE_classProcedureDeclaration = 43
    RULE_classFieldDeclaration = 44
    RULE_inheritedStatement = 45
    RULE_constructorDeclaration = 46
    RULE_destructorDeclaration = 47
    RULE_arrayDeclaration = 48
    RULE_arrayInitializer = 49
    RULE_arrayValueList = 50
    RULE_arrayType = 51
    RULE_arrayRange = 52
    RULE_arrayConstructor = 53
    RULE_arrayConstructorItems = 54
    RULE_typeName = 55
    RULE_simpleType = 56
    RULE_signedInteger = 57
    RULE_subrangeType = 58
    RULE_enumDeclaration = 59
    RULE_enumValueList = 60
    RULE_enumValue = 61
    RULE_recordDeclaration = 62
    RULE_recordFieldDeclaration = 63
    RULE_functionDeclaration = 64
    RULE_procedureDeclaration = 65
    RULE_formalParamList = 66
    RULE_formalParam = 67
    RULE_paramModifier = 68
    RULE_paramType = 69
    RULE_openArrayType = 70
    RULE_declaration = 71
    RULE_builtinDiskFunctionName = 72
    RULE_builtinHashFunctionName = 73
    RULE_functionName = 74
    RULE_functionCallExpr = 75
    RULE_procedureCallStatement = 76
    RULE_actualParamList = 77
    RULE_actualParam = 78
    RULE_varSection = 79
    RULE_varDeclaration = 80
    RULE_varType = 81
    RULE_identList = 82
    RULE_block = 83
    RULE_localDeclaration = 84
    RULE_statementList = 85
    RULE_statement = 86
    RULE_incstatement = 87
    RULE_decstatement = 88
    RULE_caseStatement = 89
    RULE_caseItem = 90
    RULE_caseLabelList = 91
    RULE_caseLabel = 92
    RULE_caseElse = 93
    RULE_breakStatement = 94
    RULE_continueStatement = 95
    RULE_tryStatement = 96
    RULE_exitStatement = 97
    RULE_forStatement = 98
    RULE_repeatStatement = 99
    RULE_argumentList = 100
    RULE_whileStatement = 101
    RULE_ifStatement = 102
    RULE_condition = 103
    RULE_compareOp = 104
    RULE_compoundStatement = 105
    RULE_assignment = 106
    RULE_variableRef = 107
    RULE_variableSuffix = 108
    RULE_pointerDereference = 109
    RULE_fieldAccess = 110
    RULE_arrayIndex = 111
    RULE_exprList = 112
    RULE_expr = 113
    RULE_boolOrExpr = 114
    RULE_boolXorExpr = 115
    RULE_boolAndExpr = 116
    RULE_compareExpr = 117
    RULE_addExpr = 118
    RULE_shiftExpr = 119
    RULE_term = 120
    RULE_factor = 121
    RULE_writeLnStatement = 122
    RULE_writeArgList = 123
    RULE_writeArg = 124

    ruleNames =  [ "sourceFile", "externalImportTarget", "routineCallingConvention", 
                   "externalRoutineDirective", "externalLibrary", "callingConvention", 
                   "programFile", "unitFile", "libraryFile", "compilerDirective", 
                   "exportsClause", "exportItem", "exportSignature", "exportTypeList", 
                   "usesClause", "qualifiedIdentList", "interfaceSection", 
                   "implementationSection", "interfaceDeclarationPart", 
                   "implementationDeclarationPart", "unitInitBlock", "qualifiedIdent", 
                   "methodDirective", "methodDirectiveList", "declarationPart", 
                   "classMethodImplementation", "procedureHeader", "functionHeader", 
                   "constSection", "constDeclaration", "constItem", "constValue", 
                   "typeSection", "typeIdentifier", "typeDeclaration", "classDeclaration", 
                   "classParent", "classBody", "classMember", "visibilitySection", 
                   "propertyDeclaration", "propertyAccessor", "classFunctionDeclaration", 
                   "classProcedureDeclaration", "classFieldDeclaration", 
                   "inheritedStatement", "constructorDeclaration", "destructorDeclaration", 
                   "arrayDeclaration", "arrayInitializer", "arrayValueList", 
                   "arrayType", "arrayRange", "arrayConstructor", "arrayConstructorItems", 
                   "typeName", "simpleType", "signedInteger", "subrangeType", 
                   "enumDeclaration", "enumValueList", "enumValue", "recordDeclaration", 
                   "recordFieldDeclaration", "functionDeclaration", "procedureDeclaration", 
                   "formalParamList", "formalParam", "paramModifier", "paramType", 
                   "openArrayType", "declaration", "builtinDiskFunctionName", 
                   "builtinHashFunctionName", "functionName", "functionCallExpr", 
                   "procedureCallStatement", "actualParamList", "actualParam", 
                   "varSection", "varDeclaration", "varType", "identList", 
                   "block", "localDeclaration", "statementList", "statement", 
                   "incstatement", "decstatement", "caseStatement", "caseItem", 
                   "caseLabelList", "caseLabel", "caseElse", "breakStatement", 
                   "continueStatement", "tryStatement", "exitStatement", 
                   "forStatement", "repeatStatement", "argumentList", "whileStatement", 
                   "ifStatement", "condition", "compareOp", "compoundStatement", 
                   "assignment", "variableRef", "variableSuffix", "pointerDereference", 
                   "fieldAccess", "arrayIndex", "exprList", "expr", "boolOrExpr", 
                   "boolXorExpr", "boolAndExpr", "compareExpr", "addExpr", 
                   "shiftExpr", "term", "factor", "writeLnStatement", "writeArgList", 
                   "writeArg" ]

    EOF = Token.EOF
    PROGRAM=1
    BEGIN_=2
    END=3
    LIBRARY=4
    UNIT=5
    INTERFACE=6
    IMPLEMENTATION=7
    USES=8
    EXPORTS=9
    CONST=10
    VAR=11
    TYPE=12
    PACKED=13
    RECORD=14
    ARRAY=15
    OF=16
    NIL=17
    DOUBLE=18
    INTEGER=19
    CASE=20
    IF=21
    THEN=22
    ELSE=23
    BREAK=24
    CONTINUE=25
    NOT=26
    AND=27
    OR=28
    XOR=29
    SHL=30
    SHR=31
    WHILE=32
    DO=33
    REPEAT=34
    UNTIL=35
    FOR=36
    TO=37
    DOWNTO=38
    INC=39
    DEC=40
    LOW=41
    HIGH=42
    POS=43
    COPY=44
    LENGTH=45
    ASSIGNED=46
    PROCEDURE=47
    FUNCTION=48
    RESULT=49
    EXIT=50
    TRY=51
    FINALLY=52
    EXCEPT=53
    CLASS=54
    CONSTRUCTOR=55
    DESTRUCTOR=56
    PRIVATE=57
    PROTECTED=58
    PUBLIC=59
    PUBLISHED=60
    PROPERTY=61
    VIRTUAL=62
    OVERRIDE=63
    READ=64
    WRITE=65
    INHERITED=66
    WRITELN=67
    BOOLEAN=68
    TRUE=69
    FALSE=70
    BLAKE2=71
    CRC16=72
    CRC32=73
    CRC32C=74
    CRC64=75
    DISKFREE=76
    DISKTOTAL=77
    DISKLABEL=78
    DISKSERIAL=79
    DISKFILESYSTEM=80
    DISKTYPE=81
    DISKSHARE=82
    CDECL=83
    STDCALL=84
    PASCAL=85
    EXTERNAL=86
    NAME=87
    COMPILER_DIRECTIVE=88
    DOTDOT=89
    DOT=90
    ASSIGN=91
    COLON=92
    SEMI=93
    COMMA=94
    PLUS=95
    MINUS=96
    STAR=97
    SLASH=98
    LBRACK=99
    LPAREN=100
    RPAREN=101
    RBRACK=102
    CARET=103
    AT=104
    EQ_OP=105
    LE_OP=106
    NE_OP=107
    LT_OP=108
    GE_OP=109
    GT_OP=110
    STRING=111
    CHARCODE=112
    FLOATNUMBER=113
    HEXNUMBER=114
    NUMBER=115
    IDENT=116
    WS=117
    COMMENT1=118
    COMMENT2=119
    COMMENT3=120
    MD5=121
    SHA1=122
    SHA3=123
    SHA224=124
    SHA256=125
    SHA384=126
    SHA512=127

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PascalParser.EOF, 0)

        def programFile(self):
            return self.getTypedRuleContext(PascalParser.ProgramFileContext,0)


        def unitFile(self):
            return self.getTypedRuleContext(PascalParser.UnitFileContext,0)


        def libraryFile(self):
            return self.getTypedRuleContext(PascalParser.LibraryFileContext,0)


        def compilerDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.CompilerDirectiveContext)
            else:
                return self.getTypedRuleContext(PascalParser.CompilerDirectiveContext,i)


        def getRuleIndex(self):
            return PascalParser.RULE_sourceFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceFile" ):
                listener.enterSourceFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceFile" ):
                listener.exitSourceFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSourceFile" ):
                return visitor.visitSourceFile(self)
            else:
                return visitor.visitChildren(self)




    def sourceFile(self):

        localctx = PascalParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 253
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==88:
                self.state = 250
                self.compilerDirective()
                self.state = 255
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 259
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 256
                self.programFile()
                pass
            elif token in [5]:
                self.state = 257
                self.unitFile()
                pass
            elif token in [4]:
                self.state = 258
                self.libraryFile()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 261
            self.match(PascalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalImportTargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externalLibrary(self):
            return self.getTypedRuleContext(PascalParser.ExternalLibraryContext,0)


        def NAME(self):
            return self.getToken(PascalParser.NAME, 0)

        def STRING(self):
            return self.getToken(PascalParser.STRING, 0)

        def IDENT(self):
            return self.getToken(PascalParser.IDENT, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_externalImportTarget

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalImportTarget" ):
                listener.enterExternalImportTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalImportTarget" ):
                listener.exitExternalImportTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalImportTarget" ):
                return visitor.visitExternalImportTarget(self)
            else:
                return visitor.visitChildren(self)




    def externalImportTarget(self):

        localctx = PascalParser.ExternalImportTargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_externalImportTarget)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 263
            self.externalLibrary()
            self.state = 266
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==87:
                self.state = 264
                self.match(PascalParser.NAME)
                self.state = 265
                _la = self._input.LA(1)
                if not(_la==111 or _la==116):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoutineCallingConventionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callingConvention(self):
            return self.getTypedRuleContext(PascalParser.CallingConventionContext,0)


        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_routineCallingConvention

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoutineCallingConvention" ):
                listener.enterRoutineCallingConvention(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoutineCallingConvention" ):
                listener.exitRoutineCallingConvention(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoutineCallingConvention" ):
                return visitor.visitRoutineCallingConvention(self)
            else:
                return visitor.visitChildren(self)




    def routineCallingConvention(self):

        localctx = PascalParser.RoutineCallingConventionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_routineCallingConvention)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 268
            self.callingConvention()
            self.state = 269
            self.match(PascalParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalRoutineDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTERNAL(self):
            return self.getToken(PascalParser.EXTERNAL, 0)

        def SEMI(self):
            return self.getToken(PascalParser.SEMI, 0)

        def externalLibrary(self):
            return self.getTypedRuleContext(PascalParser.ExternalLibraryContext,0)


        def NAME(self):
            return self.getToken(PascalParser.NAME, 0)

        def STRING(self):
            return self.getToken(PascalParser.STRING, 0)

        def IDENT(self):
            return self.getToken(PascalParser.IDENT, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_externalRoutineDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternalRoutineDirective" ):
                listener.enterExternalRoutineDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternalRoutineDirective" ):
                listener.exitExternalRoutineDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalRoutineDirective" ):
                return visitor.visitExternalRoutineDirective(self)
            else:
                return visitor.visitChildren(self)




    def externalRoutineDirective(self):
